<resources>
    <string name="app_name">PokEETACGo</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_location_permission">Title Location Permission</string>
    <string name="text_location_permission">Text Location Permission</string>
    <string name="ok">OK</string>
    <string name="title_activity_profemon_appeared">ProfemonAppearedActivity</string>
    <string name="capture_me_button">Capture me!</string>
    <string name="level">Level</string>
    <string name="zero_floor">0 floor</string>
    <string name="user">User</string>
    <string name="confirm_password">Confirm Password</string>
</resources>
