<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register_background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.upc.eetac.dsa.pokeetacgo.RegisterActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/username"
        android:background="@drawable/edittext_top_bg"
        android:padding="10dp"
        android:hint="@string/username"
        android:textColorHint="#cccccc"
        android:drawableStart="@drawable/user"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:id="@+id/email"
        android:hint="@string/email"
        android:layout_below="@+id/username"
        android:layout_alignParentStart="true"
        android:background="@drawable/edittext_default_bg"
        android:layout_marginTop="-2dp"
        android:padding="10dp"
        android:textColorHint="#bbbbbb"
        android:drawableStart="@drawable/email"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_below="@+id/email"
        android:background="@drawable/edittext_default_bg"
        android:padding="10dp"
        android:textColorHint="#cccccc"
        android:drawableStart="@drawable/password"
        android:layout_alignParentStart="true"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:id="@+id/confirmPassword"
        android:hint="@string/confirm_password"
        android:layout_below="@+id/password"
        android:background="@drawable/edittext_bottom_bg"
        android:padding="10dp"
        android:textColorHint="#cccccc"
        android:drawableStart="@drawable/password"
        android:layout_alignParentStart="true"/>

    <Button
        android:text="@string/register"
        android:layout_width="220dp"
        android:id="@+id/registerButton"
        android:onClick="register"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:background="@drawable/register_buttonshape"
        android:shadowColor="#A80788"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:layout_below="@+id/confirmPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:layout_height="50dp" />
</RelativeLayout>
